# pl0-haskell

./: .gitignore  Parser.hs  README.md  bash.exe.stackdump  pl0.cabal  stack.yaml
app/: Main.hs
src/Data/: ITree.hs
src/Data/ITree/: Zipper.hs
src/PL0/: AST.hs  Internal.hs  Lexer.x  Parser.y  StackMachine.hs  StaticChecker.hs  SymbolTable.hs
src/PL0/AST/: Class.hs
src/PL0/CodeGen/: Class.hs  JVM.hs  LLVM.hs  StackMachine.hs
src/PL0/StackMachine/: Instruction.hs  Linker.hs
src/PL0/SymbolTable/: Scope.hs
test/: test-pl0.hs
test/Tests/: PL0.hs
test/Tests/PL0/: StackMachine.hs
test/testfiles/: err.pl0  simple.pl0  simpletest.pl0  test.pl0  while.pl0
