name:                pl0
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pl0#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ITree
                     , Data.ITree.Zipper
                     , PL0.AST
                     , PL0.AST.Class
                     , PL0.CodeGen.Class
                     , PL0.CodeGen.StackMachine
                     , PL0.Lexer
                     , PL0.Parser
                     , PL0.StackMachine
                     , PL0.StackMachine.Instruction
                     , PL0.StaticChecker
                     , PL0.SymbolTable
                     , PL0.SymbolTable.Scope
  other-modules:       PL0.Internal
  build-depends:       array
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , dlist
                     , lens
                     , mtl
                     , transformers
                     , vector
  default-language:    Haskell2010
  build-tools:         alex, happy

executable pl0-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , pl0
  default-language:    Haskell2010

test-suite pl0-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-pl0.hs
  build-depends:       array
                     , base
                     , lens
                     , mtl
                     , pl0
                     , QuickCheck
                     , transformers
                     , vector
  other-modules:       Tests.PL0
                     , Tests.PL0.StackMachine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pl0
